--- a/views/articles/view.pug
+++ b/views/articles/view.pug
@@ -6,7 +6,7 @@ block content
             div.article-header-row
                 h1.article-title=article.title
             p.published-on Published
-                strong.emphasize #{article.published_on}
+                strong.emphasize #{article.friendlyPublishedDate}
                 | by
                 strong.emphasize #{article.author.first_name}
 
