--- a/views/articles/viewAll.pug
+++ b/views/articles/viewAll.pug
@@ -5,4 +5,9 @@ block content
     div.articles-header
         div.article-header-title Here's What's New
         div
-            a.button.primary() 
+            a.button.primary(href='/article/add') Write New Article
+
+    ul.article-list
+        each article in articles
+            li
+                +articleCard(article)
